chenge method 2